// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClickableTagsList > Snapshots > matches snapshot with add button 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-2"
    data-testid="container"
  >
    <button
      data-count="5"
      data-selected="true"
      data-testid="post-tag-bitcoin"
    >
      bitcoin
    </button>
    <button
      data-count="3"
      data-selected="false"
      data-testid="post-tag-ethereum"
    >
      ethereum
    </button>
    <button
      data-count="10"
      data-selected="false"
      data-testid="post-tag-crypto"
    >
      crypto
    </button>
    <button
      data-testid="post-tag-add-button"
    >
      Add
    </button>
  </div>
</div>
`;

exports[`ClickableTagsList > Snapshots > matches snapshot with close buttons 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-2"
    data-testid="container"
  >
    <button
      data-count="5"
      data-selected="true"
      data-testid="post-tag-bitcoin"
    >
      bitcoin
      <span
        data-testid="close-bitcoin"
      >
        ×
      </span>
    </button>
    <button
      data-count="3"
      data-selected="false"
      data-testid="post-tag-ethereum"
    >
      ethereum
      <span
        data-testid="close-ethereum"
      >
        ×
      </span>
    </button>
    <button
      data-count="10"
      data-selected="false"
      data-testid="post-tag-crypto"
    >
      crypto
      <span
        data-testid="close-crypto"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;

exports[`ClickableTagsList > Snapshots > matches snapshot with input visible 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-2"
    data-testid="container"
  >
    <button
      data-count="5"
      data-selected="true"
      data-testid="post-tag-bitcoin"
    >
      bitcoin
    </button>
    <button
      data-count="3"
      data-selected="false"
      data-testid="post-tag-ethereum"
    >
      ethereum
    </button>
    <button
      data-count="10"
      data-selected="false"
      data-testid="post-tag-crypto"
    >
      crypto
    </button>
    <input
      data-testid="post-tag-input"
      value=""
    />
  </div>
</div>
`;

exports[`ClickableTagsList > Snapshots > matches snapshot with tags and count 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-2"
    data-testid="container"
  >
    <button
      data-count="5"
      data-selected="true"
      data-testid="post-tag-bitcoin"
    >
      bitcoin
    </button>
    <button
      data-count="3"
      data-selected="false"
      data-testid="post-tag-ethereum"
    >
      ethereum
    </button>
    <button
      data-count="10"
      data-selected="false"
      data-testid="post-tag-crypto"
    >
      crypto
    </button>
  </div>
</div>
`;
